# NDGRClient

./: .editorconfig  .gitignore  License.txt  Readme.md  pyproject.toml  update_proto.py
ndgr_client/: __init__.py  __main__.py  constants.py  ndgr_client.py  protobuf_stream_reader.py  schemas.py  utils.py
ndgr_client/proto/dwango/nicolive/chat/data/: atoms_pb2.py  atoms_pb2.pyi  message_pb2.py  message_pb2.pyi  origin_pb2.py  origin_pb2.pyi  state_pb2.py  state_pb2.pyi
ndgr_client/proto/dwango/nicolive/chat/data/atoms/: akashic_pb2.py  akashic_pb2.pyi  forwarded_pb2.py  forwarded_pb2.pyi  ichibalauncher_pb2.py  ichibalauncher_pb2.pyi  moderator_pb2.py  moderator_pb2.pyi  notifications_pb2.py  notifications_pb2.pyi  streamstate_pb2.py  streamstate_pb2.pyi
ndgr_client/proto/dwango/nicolive/chat/service/edge/: payload_pb2.py  payload_pb2.pyi
proto/dwango/nicolive/chat/data/: atoms.proto  message.proto  state.proto
proto/dwango/nicolive/chat/data/atoms/: akashic.proto  forwarded.proto  ichibalauncher.proto  moderator.proto  notifications.proto  sensitive.proto  streamstate.proto
proto/dwango/nicolive/chat/service/edge/: payload.proto
